src/main/java/com/example/buyer/_core/errors/exception/Exception401.java
package com.example.buyer._core.errors.exception;

public class Exception401 extends RuntimeException{

    public Exception401(String msg) {
        super(msg);
    }
}